--- a/style.css
+++ b/style.css
@@ -128,9 +128,45 @@ main {
     justify-content: space-around;
 }
 
+main section {
+    margin-top: 130px;
+}
+
 .about-info {
     text-align: center;
     font-size: 20px;
     line-height: 30px;
     font-weight: 400;
+}
+
+#section-id {
+    padding: 30px 150px;
+}
+
+.skill-container {
+    display: flex;
+    gap: 25px;
+}
+
+.skill {
+    padding: 30px;
+    background: #ffffff;
+    border-radius: 5px;
+    width: 267px;
+    height: 377px;
+    position: relative;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+
+.skill-des {
+    padding: 30px;
+    color: #757575;
+}
+
+.re-column-title {
+    color: #474747;
+    text-align: left;
+    font-size: 30px;
+    font-weight: 700;
+    position: relative;
 }
